<resources>
    <string name="app_name">Custo de viagem</string>
    <string name="distancy">Distância</string>
    <string name="price">Preço</string>
    <string name="total_km">Total de quilômetros</string>
    <string name="price_per_liter">Preço por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="kms_per_liter">Kms por litro</string>
    <string name="total_spending">Seu gasto total será de:</string>
    <string name="calculate">CALCULAR</string>
    <string name="total_value">R$ 0</string>
</resources>